--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,28 @@ h1 {
 	font-family: 'Lora', serif;
 }
 
-p {
+p,
+button {
 	font-family: 'Anonymous Pro', monospace;
+}
+
+.final_guess {
+	position: absolute;
+    top: 30px;
+    right: 35px;
+}
+
+.final_guess button {
+	color: #fff;
+	text-shadow: 1px 0px 8px rgba(150, 150, 150, 0.75);
+	font-size: 1.1em;
+	background: #6EC94A;
+	height: 120px;	
+	width: 120px;
+	border: none;
+	border-radius: 100%; 
+	-webkit-box-shadow: 0px 0px 8px 2px rgba(0,0,0,0.3); 
+	box-shadow: 0px 0px 8px 2px rgba(0,0,0,0.3);
 }
 
 .wrapper {
@@ -17,6 +37,7 @@ p {
 }
 
 .overlay {
+	position: absolute;
 	background-color: rgba(0, 0, 0, .5);
 	height: 100%;
 	width: 100%;
@@ -65,7 +86,8 @@ p {
 	transition: .4s;
 }
 
-.inner-overlay button:focus {
+.inner-overlay button:focus,
+.final_guess button:focus {
 	outline-style: none;
 }
 
